<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/viewPagerFragment">

    <!-- Onboarding Flow -->
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.example.skoolswap.ui.onboarding.ViewPagerFragment"
        android:label="Onboarding"
        tools:layout="@layout/fragment_view_pager">
        <action
            android:id="@+id/action_viewPagerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Login Flow -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.skoolswap.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main App Flow -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.skoolswap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.skoolswap.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.skoolswap.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!-- ADD THIS: Profile Fragment -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.skoolswap.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>